--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <div class="container">
   <h2>El anime de Sou sou frieren finaliza siendo de los mejores animes del mundo</h2>
   <img src="imagenes/s.jpg" alt="">
-  <p>Sou sou frieren ha terminado después de su último cápitulo. Con un total de 28 cápitulos, emocionando a todos sus espectadores. A tal punto que a día de hoy, se mantiene como el mejor anime de la historia según votos de MyAnimelist, con una nota de 9.37.</p>
+  <p>Sou sou frieren ha terminado después de su último capítulo. Con un total de 28 capítulo, emocionando a todos sus espectadores. A tal punto que a día de hoy, se mantiene como el mejor anime de la historia según votos de <a href="https://myanimelist.net/anime/52991/Sousou_no_Frieren?q=frie&cat=anime">MyAnimelist</a>, con una nota de 9.29.</p>
   <br>
   <p>Esta obra creada por Kanehito Yamada y adaptada por el estudio Madhouse, ha encantado a practicamente todo el mundo, con una gran animación e historia. La protagonista Frieren, única en lo que a la temática de su anime se refiere.</p>
 </div>
@@ -125,4 +125,5 @@
 <script src="index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> <!-- boostrap js -->
 </body>
+
 </html>
