Revise carousel images and captions in index.html
Updated carousel items and content in index.html.

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
   <div class="carousel-inner">
     <!-- Diapositiva 1 -->
     <div class="carousel-item active">
-      <img src="imagenes/blue.webp" class="d-block w-100" alt="...">
+      <img src="imagenes/fireforce.webp" class="d-block w-100" alt="...">
       <div class="carousel-caption text-start">
         <span class="badge bg-danger mb-2">Anime</span>
-        <h2>BLUE LOCK</h2>
-        <h3>BLUE LOCK anuncia una nueva temporada y una película live action</h3>
-        <p class="mt-3">Estreno está previsto para el Verano de 2026</p>
+        <h2>Fire Force</h2>
+        <h3>Regresa Firce Force con su tercera temporada</h3>
+        <p class="mt-3">Estreno está previsto para enero de 2026</p>
         <small class="d-block mt-3">Disponible en Crunchyroll</small>
       </div>
     </div>
@@ -127,3 +127,4 @@
 </body>
 
 </html>
+
